Added changes to background image.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     
     <!-- ??? How do I make this image accessable??? -->
-    <div class="hero"></div>
+    <div class="hero" title="Image of people working together as a team."></div>
 
     <div class="content">
 
