--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>        
     </div>
     
-    <!-- ??? How do I make this image accessable??? -->
-    <div class="hero" title="Image of people working together as a team."></div>
+    <!--Added title command to make the image more accessable.-->
+   <div class="hero" title="Image of people working together as a team."></div>
 
     <div class="content">
 
