--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>        
     </div>
     
-    <!--Added title command to make the image more accessable.-->
-   <div class="hero" title="Image of people working together as a team."></div>
+    <!--Added img command and alt command to make the image more accessable.-->
+   <div> <img src="./images/digital-marketing-meeting.jpg" class="hero" alt="Image of people working together as a team."></div>
 
     <div class="content">
 
